--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,3 +8,7 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+resources/background
+src/webview/*/index.css
+src/webview/*/index.js
+test/**
