添加多个交互api的封装
设置背景图及重启窗口等操作添加弹框交互

插件初始化时添加了对背景图文件是否修改或删除的判断

--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
       {
         "title": "custom background image",
         "properties": {
+          "wangyige.background.load": {
+            "type": "boolean",
+            "default": false,
+            "description": "软件启动后加载背景图的判断"
+          },
           "wangyige.background.opacity": {
             "type": "number",
             "maximum": 1,
