--- a/package.json
+++ b/package.json
@@ -108,5 +108,8 @@
     "mocha": "^10.1.0",
     "typescript": "^4.9.4",
     "vitest": "^0.29.8"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
