view/title的重置图标添加显示条件判断

--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
 				},
 				{
 					"command": "wangyige.background.resetStore",
-					"when": "view == wangyige.custom.backgroundImage",
+					"when": "view == wangyige.custom.backgroundImage && config.wangyige.background.storePath != ''",
 					"group": "navigation"
 				},
 				{
