webview页面文件位置移动，解决没有打包的问题

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -9,7 +9,7 @@ vsc-extension-quickstart.md
 **/*.map
 **/*.ts
 resources/background
-src/webview/*/index.css
-src/webview/*/index.js
+webview/*/index.css
+webview/*/index.js
 test/**
 resources/extension
