--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ dist
 node_modules
 .vscode-test/
 *.vsix
-src/webview/*/index.css
-src/webview/*/index.js
+webview/*/index.css
+webview/*/index.js
 resources/background/*.wyg
