--- a/package.json
+++ b/package.json
@@ -122,6 +122,11 @@
 						"default": [],
 						"description": "随机切换的背景图哈希码"
 					},
+					"wangyige.background.randomCode": {
+						"type": "string",
+						"default": "",
+						"description": "下一次启动时随机切换的图片哈希码"
+					},
 					"wangyige.webview.VSCodeVersion": {
 						"type": "string",
 						"default": "",
