修改webview运行逻辑，根据生产、开发环境以及版本状态进行引用文件选择及合并，发布前需要进行生产文件合并

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ dist
 node_modules
 .vscode-test/
 *.vsix
-webview/*/index.css
-webview/*/index.js
+webview/src/*/index.*.css
+webview/src/*/index.*.js
 resources/background/
 package-lock.json
-production/
