--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "wangyige",
 	"displayName": "WangYige",
 	"description": "My custom extension",
-	"version": "0.1.1",
+	"version": "0.2.1",
 	"publisher": "wangyige",
 	"repository": {
 		"url": "https://github.com/wangyige0701/vscodeCustomExtension"
@@ -155,7 +155,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "ts-node src/filePackage/check.ts && npm run compile",
-		"compile": "tsc -p ./",
+		"compile": "rollup -c",
 		"pre": "ts-node src/filePackage/production.ts",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
@@ -163,6 +163,10 @@
 		"test": "vitest --run"
 	},
 	"devDependencies": {
+		"@rollup/plugin-commonjs": "^25.0.3",
+		"@rollup/plugin-json": "^6.0.0",
+		"@rollup/plugin-node-resolve": "^15.1.0",
+		"@rollup/plugin-terser": "^0.4.3",
 		"@types/glob": "^8.0.1",
 		"@types/mocha": "^10.0.1",
 		"@types/node": "16.x",
@@ -174,6 +178,8 @@
 		"eslint": "^8.33.0",
 		"glob": "^8.1.0",
 		"mocha": "^10.1.0",
+		"rollup": "^3.27.1",
+		"rollup-plugin-typescript2": "^0.35.0",
 		"terser": "^5.18.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4",
