--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "ESNext",
+		"module": "CommonJS",
 		"target": "ES2022",
 		"outDir": "out",
 		"lib": [
@@ -10,8 +10,7 @@
 		"rootDir": "src",
 		"strict": true,   /* enable all strict type-checking options */
 		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		"moduleResolution": "Node",
+		"esModuleInterop": true
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
