--- a/.vscodeignore
+++ b/.vscodeignore
@@ -11,9 +11,10 @@ vsc-extension-quickstart.md
 resources/background/**
 resources/extension/**
 resources/docs/**
-webview/src/*/css
-webview/src/*/js
+webview/src/*/css/**
+webview/src/*/js/**
 webview/src/*/*.development.*
+webview/*.css
 test/**
 filePackage/**
 fileicons/**
