--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"module": "CommonJS",
 		"target": "ES2022",
-		"outDir": "out",
+		"outDir": "dist",
 		"lib": [
 			"ES2022"
 		],
