--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
 		"@rollup/plugin-json": "^6.0.0",
 		"@rollup/plugin-node-resolve": "^15.1.0",
 		"@rollup/plugin-terser": "^0.4.3",
+		"@rollup/plugin-typescript": "^11.1.2",
 		"@types/glob": "^8.0.1",
 		"@types/mocha": "^10.0.1",
 		"@types/node": "16.x",
@@ -179,7 +180,6 @@
 		"glob": "^8.1.0",
 		"mocha": "^10.1.0",
 		"rollup": "^3.27.1",
-		"rollup-plugin-typescript2": "^0.35.0",
 		"terser": "^5.18.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4",
