webview文件整合方式修改 1、不再指定webview合并的公共文件，该为根目录下项目目录以外的所有js、css文件全部整合到发布文件中。 2、创建所有webview的公共js工具库。 3、版本预发布检测输出版本号。

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -15,6 +15,7 @@ webview/src/*/css/**
 webview/src/*/js/**
 webview/src/*/*.development.*
 webview/*.css
+webview/*.js
 test/**
 filePackage/**
 fileicons/**
