图片哈希码储存对象修改 将旧数据类型的数组改为对象，通过储存路径的哈希码为索引进行对应数组的获取

--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
 						"description": "当前选中图片路径哈希值"
 					},
 					"wangyige.background.allImagePath": {
-						"type": "array",
+						"type": "object",
 						"default": {},
 						"description": "所有选择的背景图路径哈希值数组"
 					},
