背景图切换优化 1、package.json部分configuraion重命名，命名空间方法命名联动修改 2、设置随机背景图方法改为promise，方便状态确认 3、关闭随机切换时，立刻将css文件中的图片数据修从已经设置好的随机图片还原为当前图片，同时清空相关配置 4、注册背景图webview页面时，添加是否需要调用随机修改背景图方法的判断，避免无用开销

--- a/package.json
+++ b/package.json
@@ -87,15 +87,15 @@
 						"default": 0.3,
 						"description": "背景透明度(0-1)"
 					},
-					"wangyige.background.nowImagePath": {
+					"wangyige.background.nowImageCode": {
 						"type": "string",
 						"default": "",
 						"description": "当前设置的背景图对应的哈希码"
 					},
-					"wangyige.background.allImagePath": {
+					"wangyige.background.allImageCodes": {
 						"type": "object",
 						"default": {},
-						"description": "所有保存的背景图对应的哈希码数组，不同路径会存放在路径对应的哈希码索引下"
+						"description": "所有保存的背景图对应的哈希码数组对象，不同路径会存放在路径对应的索引下"
 					},
 					"wangyige.background.isSetBackground": {
 						"type": "boolean",
