扩展侧圈复杂度优化 将通讯数据处理函数中的switch、case修改为通过一个配置函数创建执行闭包函数。 将name和value传入闭包函数，根据配置信息执行指定函数并统一进行传参逻辑处理。 优化type类型数据，完善代码提示

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
         "files": ["*.ts"],
         "rules": {
             "@typescript-eslint/semi": "off",
-            "@typescript-eslint/naming-convention": "warn",
+            "@typescript-eslint/naming-convention": "off",
+            "no-throw-literal": "off",
             "complexity": ["error", 15]
         }
     }],
