--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
 	"include": [
-		"src/**/*"
+		"src/**/*",
+		"src/@types/*.d.ts"
 	],
 	"exclude": [
 		"src/filePackage"
