--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
 		"@rollup/plugin-typescript": "^11.1.2",
 		"@types/glob": "^8.0.1",
 		"@types/mocha": "^10.0.1",
-		"@types/node": "16.x",
+		"@types/node": "^16.18.47",
 		"@types/vscode": "^1.78.0",
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"@typescript-eslint/parser": "^5.49.0",
