--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,15 @@
 		"rootDir": "src",
 		"strict": true,   /* enable all strict type-checking options */
 		"resolveJsonModule": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"typeRoots": ["./node_modules/@types", "./src/@types/*.d.ts"]
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
 	"include": [
-		"src/**/*",
-		"src/@types/*.d.ts"
+		"src/**/*"
 	],
 	"exclude": [
 		"src/filePackage"
