--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,16 +9,16 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "curly": "off",
+        "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
-        "semi": "off",
+        "semi": "warn",
         "complexity": ["error", 15]
     },
     "overrides": [{
         "files": ["*.ts"],
         "rules": {
-            "@typescript-eslint/semi": "off",
+            "@typescript-eslint/semi": "warn",
             "@typescript-eslint/naming-convention": "off",
             "no-throw-literal": "off",
             "complexity": ["error", 15]
