webview文件整理 1、将所有公共文件分别放入css、js文件夹 2、开发、正式环境对公共文件打包方法修改，遍历对应文件夹获取文件 3、优化开发环境webview打包频率，已经注册过的webview页面不会再进行文件合并

--- a/src/filePackage/tsconfig.json
+++ b/src/filePackage/tsconfig.json
@@ -4,6 +4,6 @@
 		"strict": true,   /* enable all strict type-checking options */
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
-		"moduleResolution": "Node",
+		"moduleResolution": "Node"
 	}
 }
