--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,6 +41,13 @@
 			"env": {
 				"NODE_ENV": "development"
 			}
+		},
+		{
+			"name": "Run ts-ndoe",
+			"type": "node",
+			"request": "launch",
+			"console": "integratedTerminal",
+			"runtimeArgs": ["-r", "ts-node/register", "${file}"]
 		}
 	]
 }
