filePackage相关文件调整

--- a/package.json
+++ b/package.json
@@ -169,8 +169,8 @@
 		"vscode:prepublish": "npm run check && npm run compile",
 		"vscode:uninstall": "node ./dist/uninstall",
 		"compile": "rollup -c",
-		"pre": "ts-node src/filePackage/production.ts",
-		"check": "ts-node src/filePackage/check.ts",
+		"pre": "ts-node src/package/production.ts",
+		"check": "ts-node src/package/check.ts",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
