--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,6 +1,5 @@
 .vscode/**
 .vscode-test/**
-node_modules/**
 src/**
 .gitignore
 .yarnrc
@@ -26,3 +25,7 @@ dist/**
 !dist/uninstall.js
 # 主题文件夹不进行发布
 resources/theme/**
+# sharp发布
+# node_modules/**/{*.c,*.cc,*.cpp,*.md,LIECNSE,*.gyp,*.h}
+node_modules/**
+!node_modules/{sharp,color,detect-libc,semver}/**/{*.js,*.node,*.json}
