--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,5 +1,6 @@
 .vscode/**
 .vscode-test/**
+node_modules/**
 src/**
 .gitignore
 .yarnrc
@@ -23,9 +24,6 @@ out/**
 dist/**
 !dist/extension.js
 !dist/uninstall.js
+!dist/build
 # 主题文件夹不进行发布
 resources/theme/**
-# sharp发布
-# node_modules/**/{*.c,*.cc,*.cpp,*.md,LIECNSE,*.gyp,*.h}
-node_modules/**
-!node_modules/{sharp,color,detect-libc,semver}/**/{*.js,*.node,*.json}
