--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "wangyige",
 	"displayName": "WangYige",
-	"description": "My custom extension",
+	"description": "My custom extension, to record some ideas.",
 	"version": "0.6.13",
 	"publisher": "wangyige",
 	"repository": {
 		"type": "github",
-		"url": "https://github.com/wangyige0701/vscode-custom-extension.git"
+		"url": "https://github.com/wangyige0701/vscode-custom-extension"
 	},
 	"bugs": {
+		"email": "1776686515@qq.com",
 		"url": "https://github.com/wangyige0701/vscode-custom-extension/issues"
 	},
 	"engines": {
