json文件单独压缩

--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
 		"cssnano": "^6.0.1",
 		"eslint": "^8.33.0",
 		"glob": "^8.1.0",
+		"jsonminify": "^0.4.2",
 		"mocha": "^10.1.0",
 		"rollup": "^3.27.1",
 		"terser": "^5.18.2",
