--- a/.vscodeignore
+++ b/.vscodeignore
@@ -12,6 +12,7 @@ vsc-extension-quickstart.md
 **/*.ts
 **/rollup.config.js
 resources/background/**
+resources/alarmClock/**
 resources/extension/**
 resources/docs/**
 webview/src/*/css/**
