打包方法文件位置调整

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
 	},
 	"include": [
 		"src/**/*"
-	],
+, "package"	],
 	"exclude": [
-		"src/package",
+		"package",
 		"src/uninstall.ts",
 		"src/library/external"
 	]
