--- a/package.json
+++ b/package.json
@@ -183,9 +183,9 @@
 		"vscode:prepublish": "npm run check && npm run compile",
 		"vscode:uninstall": "node ./dist/uninstall",
 		"compile": "rollup -c",
-		"pre": "ts-node src/package/production.ts",
-		"check": "ts-node src/package/check.ts",
-		"watch": "ts-node src/package/cleardist.ts && tsc -watch -p ./",
+		"pre": "ts-node package/production.ts",
+		"check": "ts-node package/check.ts",
+		"watch": "ts-node package/cleardist.ts && tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
 		"test": "vitest --run"
