--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 				"description": "alarm clock icon",
 				"default": {
 					"fontPath": "./resources/icon/icon.woff",
-					"fontCharacter": "\\E600"
+					"fontCharacter": "\\E61d"
 				}
 			}
 		},
