测试版本状态添加 打包时如果为测试版本，则在已打包过测试版本webview文件条件下，跳过打包校验

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "wangyige",
 	"displayName": "WangYige",
 	"description": "My custom extension, to record some ideas.",
-	"version": "0.7.1",
+	"version": "0.7.1-beta",
 	"publisher": "wangyige",
 	"repository": {
 		"type": "github",
