postcss依赖项下载

--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
 		"glob": "^8.1.0",
 		"json5": "^2.2.3",
 		"mocha": "^10.1.0",
+		"postcss": "^8.4.31",
 		"rollup": "^3.27.1",
 		"terser": "^5.18.2",
 		"ts-node": "^10.9.1",
