--- a/package.json
+++ b/package.json
@@ -216,6 +216,7 @@
 		"json5": "^2.2.3",
 		"mocha": "^10.1.0",
 		"postcss": "^8.4.31",
+		"prebuild-install": "^7.1.1",
 		"rollup": "^3.27.1",
 		"terser": "^5.18.2",
 		"ts-node": "^10.9.1",
