--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,14 @@
 		"strict": true,   /* enable all strict type-checking options */
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
-		"typeRoots": ["./node_modules/@types", "./src/@types/*.d.ts"]
+		"typeRoots": ["./node_modules/@types", "./src/@types/*.d.ts"],
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"],
+			"@app/*": ["src/app/*"],
+			"@background/*": ["src/app/background/*"],
+			"@time/*": ["src/app/time/*"]
+		}
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
