--- a/package.json
+++ b/package.json
@@ -221,7 +221,8 @@
 		"terser": "^5.18.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4",
-		"vitest": "^0.29.8"
+		"vitest": "^0.29.8",
+		"webpack": "^5.89.0"
 	},
 	"dependencies": {
 		"axios": "^1.4.0",
