--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,19 +8,25 @@
 // A task runner that calls a custom npm script that compiles the extension.
 {
 	"version": "2.0.0",
+	"presentation": {
+		"echo": false,
+		"reveal": "always",
+		"focus": false,
+		"panel": "dedicated",
+		"showReuseMessage": false
+	},
 	"tasks": [
 		{
 			"type": "npm",
 			"script": "watch",
-			"problemMatcher": "$tsc-watch",
-			"isBackground": true,
-			"presentation": {
-				"reveal": "never"
-			},
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			}
+			},
+			"presentation": {
+				"group": "watchers"
+			},
+			"problemMatcher": ["$ts-webpack-watch", "$ts-checker-webpack-watch", "$ts-checker-eslint-webpack-watch"]
 		},
 		{
 			"label": "pre",
