--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,21 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
     "files.exclude": {
-        "out": false, // set this to true to hide the "out" folder with the compiled JS files
         "**/*.development.*": true,
         "**/*.production.*": true
     },
     "search.exclude": {
-        "out": true, // set this to false to include "out" folder in search results
         "dist": true
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-    "typescript.tsc.autoDetect": "off"
+    "typescript.tsc.autoDetect": "off",
+    "[html][javascript][json][markdown][css][typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "npm.packageManager": "pnpm",
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true
 }
