--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
 		"compile": "rollup -c",
 		"pre": "ts-node package/production.ts",
 		"check": "ts-node package/check.ts",
-		"watch": "ts-node package/cleardist.ts && node rollup.config.dev.js",
+		"watch": "ts-node package/cleardist.ts && webpack --mode development --watch",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
 		"test": "vitest --run"
@@ -210,19 +210,26 @@
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"@typescript-eslint/parser": "^5.49.0",
 		"@vscode/test-electron": "^2.2.2",
+		"circular-dependency-plugin": "5.2.2",
 		"cssnano": "^6.0.1",
 		"eslint": "^8.33.0",
+		"fork-ts-checker-webpack-plugin": "6.5.3",
 		"glob": "^8.1.0",
-		"json5": "^2.2.3",
+		"json5": "2.2.3",
 		"mocha": "^10.1.0",
 		"postcss": "^8.4.31",
-		"prebuild-install": "^7.1.1",
-		"rollup": "^3.27.1",
+		"prebuild-install": "7.1.1",
+		"prettier": "^3.1.1",
+		"rollup": "3.27.1",
 		"terser": "^5.18.2",
+		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.1",
+		"tsconfig-paths-webpack-plugin": "4.1.0",
 		"typescript": "^4.9.4",
-		"vitest": "^0.29.8",
-		"webpack": "^5.89.0"
+		"vitest": "0.29.8",
+		"webpack": "5.89.0",
+		"webpack-cli": "5.1.4",
+		"webpack-node-externals": "3.0.0"
 	},
 	"dependencies": {
 		"axios": "^1.4.0",
