--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,17 @@
 {
+	"extends": "./tsconfig.basic.json",
 	"compilerOptions": {
-		"module": "CommonJS",
-		"target": "ES2022",
-		"outDir": "dist",
-		"lib": [
-			"ES2022"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true,   /* enable all strict type-checking options */
-		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		"typeRoots": ["./node_modules/@types", "./src/@types/*.d.ts"],
-		"baseUrl": ".",
 		"paths": {
 			"@/*": ["src/*"],
 			"@app/*": ["src/app/*"],
 			"@background/*": ["src/app/background/*"],
 			"@time/*": ["src/app/time/*"]
 		}
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
-	"include": [
-		"src/**/*"
-	],
 	"exclude": [
 		"package",
 		"src/uninstall.ts",
 		"src/library/external"
-	]
+	],
+	"include": ["src/**/*"]
 }
