调试工具配置完善

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,7 @@
 			"presentation": {
 				"group": "watchers"
 			},
+			"isBackground": true,
 			"problemMatcher": ["$ts-webpack-watch", "$ts-checker-webpack-watch", "$ts-checker-eslint-webpack-watch"]
 		},
 		{
