--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,8 @@
 		}
 	},
 	"exclude": [
-		"package",
 		"src/uninstall.ts",
-		"src/library/external"
+		"src/library/external/**/*"
 	],
 	"include": ["src/**/*"]
 }
