--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     },
     "files.exclude": {
         "**/*.development.*": true,
-        "**/*.production.*": true
+        "**/*.production.*": true,
+        ".eslintcache": true,
     },
     "search.exclude": {
         "dist": true
