项目调整 1、rollup打包调整，临时添加全局变量 2、添加i18n方法 3、pnpm改为npm，vsce打包工具只能使用npm或yarn 4、部分class方法this失效调整

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,7 +2,7 @@
 .vscode-test/**
 node_modules/**
 src/**
-.gitignore
+**/.gitignore
 .yarnrc
 pnpm-lock.yaml
 vsc-extension-quickstart.md
@@ -35,3 +35,5 @@ rollup-plugin/**
 **/webpack.config.js
 .prettierignore
 .prettierrc
+tsconfig.tsbuildinfo
+.rollup.cache/**
