--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "wangyige",
 	"displayName": "WangYige",
 	"description": "My custom extension, to record some ideas.",
-	"version": "0.7.1-beta",
+	"version": "0.7.2",
 	"publisher": "wangyige",
 	"repository": {
 		"type": "github",
@@ -210,6 +210,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"@typescript-eslint/parser": "^5.49.0",
 		"@vscode/test-electron": "^2.2.2",
+		"@vscode/vsce": "^2.23.0",
 		"circular-dependency-plugin": "5.2.2",
 		"cssnano": "^6.0.1",
 		"eslint": "^8.33.0",
