--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "wangyige",
 	"displayName": "WangYige",
 	"description": "My custom extension, to record some ideas.",
-	"version": "0.7.2",
+	"version": "0.7.3",
 	"publisher": "wangyige",
 	"repository": {
 		"type": "github",
@@ -227,6 +227,7 @@
 		"ts-node": "^10.9.1",
 		"tsconfig-paths-webpack-plugin": "4.1.0",
 		"typescript": "4.9.4",
+		"unplugin-auto-import": "^0.17.5",
 		"vitest": "0.29.8",
 		"webpack": "5.89.0",
 		"webpack-cli": "5.1.4",
